--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,9 +1,11 @@
+
 .App {
   height: 100vh;
   background-color: rgb(20, 20, 20);
   overflow: scroll;
   text-align: center;
   overflow: hidden;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
 }
 
 .container {
@@ -14,7 +16,10 @@
   padding: 0 30px 0 30px;
   color: white;
   position: relative;
+  background-image: url(Stocked-Walk-In-Cooler.jpg);
+  background-size: cover;
   background-color: #35aee2;
+  text-shadow: 2px 2px 2px black;
 }
 
 .authed-container {
@@ -32,10 +37,12 @@
   margin: 0;
   font-size: 50px;
   font-weight: bold;
+  letter-spacing: .5px;
 }
 
 .sub-text {
   font-size: 25px;
+  text-shadow: 3px 3px 2px black;
 }
 
 .gradient-text {
@@ -59,13 +66,13 @@
 
 .connect-wallet-button {
   color: white;
-  background: -webkit-linear-gradient(left, #ff8867, #ff52ff);
+  background: -webkit-linear-gradient(left, #FFC72C, #DA291C);
   background-size: 200% 200%;
   animation: gradient-animation 4s ease infinite;
 }
 
 .mint-button {
-  background: -webkit-linear-gradient(left, #4e44ce, #35aee2);
+  background: -webkit-linear-gradient(left, #FFC72C, #DA291C);
   background-size: 200% 200%;
   animation: gradient-animation 4s ease infinite;
   margin-left: 10px;
@@ -79,7 +86,7 @@
   width: 100%;
   bottom: 0;
   left: 0;
-  /* padding-bottom: 45px; */
+  padding-bottom: 40px;
 }
 
 .twitter-logo {
