--- a/app/src/App.css
+++ b/app/src/App.css
@@ -5,7 +5,7 @@
   overflow: scroll;
   text-align: center;
   overflow: hidden;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+  font-family: 'Segoe UI', Tahoma, Verdana, sans-serif; 
 }
 
 .container {
